settinp up framework

--- a/dotnet_portfolio/dotnet_portfolio.csproj
+++ b/dotnet_portfolio/dotnet_portfolio.csproj
@@ -2,8 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-  </PropertyGroup>
-
+  
+<PlatformTarget>AnyCPU</PlatformTarget>
+<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+</PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
